# papers-the-agentoscope

./: README.md  audit.md  brief.md  metadata.yaml  research.md  sources.md
paper/: PAPER.md
simulation/: analyses.py  figures.py  pyproject.toml  run_all.py
simulation/output/: results.json
